--- a/public/index.html
+++ b/public/index.html
@@ -6,35 +6,45 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>Aura-Main</title>
+  <title>DSC VIIT</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
   <link rel="stylesheet" href="//cdn.materialdesignicons.com/2.0.46/css/materialdesignicons.min.css">
   <meta name="og:title" content="DSCVIIT" />
   <meta name="og:type" content="Community" />
   <meta name="og:url" content="<%= BASE_URL %>" />
-  <meta name="og:site_name" content="GDG Website" />
-  <meta name="og:description"
-    content="Google Developers Group is an initiative to concentrate the efforts of many developers in and around world to learn, share and get productive using the various Google products." />
-    <meta name="keywords" content="Developer Students Clubs, Google Developers Groups,DSC,DSCVIIT,dscviit,vignan,vizag">
-    
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84991751-1"></script>
+  <meta name="og:site_name" content="DSC VIIT" />
+  <meta name="Description"
+    content="DSC VIIT (Developer Student Club VIIT) is a Google Developers program for university students, with an aim to help students build their development skills.">
+  <meta name="keywords"
+    content="Developer Students Clubs, Google Developers Groups,DSC,DSCVIIT,dscviit,vignan,vizag,viit dsc">
+
+  <!-- Google Tag Manager -->
   <script>
-    window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-84991751-1');
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || [];
+      w[l].push({
+        'gtm.start': new Date().getTime(),
+        event: 'gtm.js'
+      });
+      var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s),
+        dl = l != 'dataLayer' ? '&l=' + l : '';
+      j.async = true;
+      j.src =
+        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+      f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-M662RFJ');
   </script>
+  <!-- End Google Tag Manager -->
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M662RFJ" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <noscript>
-    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
-      Please enable it to continue.</strong>
+    <img rel="icon" href="<%= BASE_URL %>favicon.ico">
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
